--- a/Banikfy/bankerHome.html
+++ b/Banikfy/bankerHome.html
@@ -35,7 +35,7 @@
                 </span>
               <h3>Loan Requests</h3>
             </a>
-            <a href="">
+            <a href="clientsBanker.html">
               <span class="material-symbols-outlined">groups</span>
               <h3>Clients</h3>
             </a>
