--- a/Banikfy/loansRequests.html
+++ b/Banikfy/loansRequests.html
@@ -35,9 +35,9 @@
                 </span>
               <h3>Loan Requests</h3>
             </a>
-            <a href="">
+            <a href="clientsBanker.html">
                 <span class="material-symbols-outlined">groups</span>
-              <h3>CLients</h3>
+              <h3>Clients</h3>
             </a>
             <a href="">
               <span class="material-symbols-outlined">notifications</span>
@@ -62,7 +62,7 @@
       </aside>
       <main>
         <div class = "recent-requests">
-          <h2>Credit Card Requests</h2>
+          <h2>Loan Requests</h2>
           <table>
             <thead>
               <tr>
