--- a/bankerClientDetails.html
+++ b/bankerClientDetails.html
@@ -7,7 +7,7 @@
     <title>Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons"rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="./bankerHomeStyle.css">    
+    <link rel="stylesheet" href="./bankerClientStyle.css">    
   </head>
   <body onload="checkCredentials()">
     <div class="container" id="blur">
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="sidebar">
-            <a href="#" class="active">
+            <a href="bankerHome.html">
               <span class="material-symbols-outlined">home</span>
               <h3>Home</h3>
             </a>
@@ -61,60 +61,94 @@
         </div>
       </aside>
       <main>
-        <h1 style="margin-left: 21rem; margin-bottom: 2rem;">Performance Summary</h1>
-        <div class="performance-summary">
-          <div class="All-summary">
-            <div class = "summary">
-              <span class="material-symbols-outlined">
-                group_add
-                </span>
-              <div class="type">
-                <h2>Accounts Openned</h2>
+        <h1>Home</h1>
+        <div class="date">
+          <span>9/5/2023</span>
+        </div>
+        <div class="accounts-balance">
+          <div class="balance">
+            <span class="material-symbols-outlined">
+              account_balance_wallet
+              </span>
+              <div class="total-balance">
+                <h3>Balance</h3>
+                <h1>EGP 1,590,465</h1>
               </div>
-              <div class="number">
-                <h1>654</h1>
+              <small class ="blank-text">Bank Account : 9879651321651</small>
+          </div>
+          <div class="balance">
+            <span class="material-symbols-outlined">
+              account_balance_wallet
+              </span>
+              <div class="total-balance">
+                <h3>Balance</h3>
+                <h1>$ 89,465</h1>
               </div>
-            </div>
-            <div class = "summary">
-              <span class="material-symbols-outlined">
-                lab_profile
-                </span>
-              <div class="type">
-                <h2>Reports Pending</h2>
+              <small class ="blank-text">Bank Account : 5615183218651</small>
+          </div>
+          <div class="balance">
+            <span class="material-symbols-outlined">
+              account_balance_wallet
+              </span>
+              <div class="total-balance">
+                <h3>Balance</h3>
+                <h1>€ 30,549</h1>
               </div>
-              <div class="number">
-                <h1>51</h1>
-              </div>
-            </div>
-            <div class = "summary">
-              <span class="material-symbols-outlined">
-                credit_score
-                </span>
-              <div class="type">
-                <h2>Loan Requests</h2>
-              </div>
-              <div class="number">
-                <h1>87</h1>
-              </div>
-            </div>
-            <div class = "summary">
-              <span class="material-symbols-outlined">
-                credit_card
-                </span>
-              <div class="type">
-                <h2>Credit Card Requests</h2>
-              </div>
-              <div class="number">
-                <h1>65</h1>
-              </div>
-            </div>
+              <small class ="blank-text">Bank Account : 5648493519854</small>
           </div>
         </div>
-
-        <div class="">
-
+        <div class = "recent-transactions">
+          <h2>Recent Transactions</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Date</th>
+                <th>Amount<thd>
+                <th>Paid By</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>65164</td>
+                <td>9-5-2023</td>
+                <td>$56.35</td>
+                <td>5615183218651</td>
+                <td><a href="#"class="primary">Details</a></td>
+              </tr>
+              <tr>
+                <td>59489</td>
+                <td>2-4-2023</td>
+                <td>EGP 356.64</td>
+                <td>9879651321651</td>
+                <td><a href="#"class="primary">Details</a></td>
+              </tr>
+              <tr>
+                <td>98756</td>
+                <td>10-3-2023</td>
+                <td>$845.54</td>
+                <td>5615183218651</td>
+                <td><a href="#"class="primary">Details</a></td>
+              </tr>
+              <tr>
+                <td>23156</td>
+                <td>24-1-2023</td>
+                <td>$56.35</td>
+                <td>5615183218651</td>
+                <td><a href="#"class="primary">Details</a></td>
+              </tr>
+              <tr>
+                <td>56989</td>
+                <td>15-1-2023</td>
+                <td>€894</td>
+                <td>5648493519854</td>
+                <td><a href="#"class="primary">Details</a></td>
+              </tr>
+            </tbody>
+          </table>
+          <a href="#" class="showall">Show All</a>
         </div>
-        
       </main>
       <div class="right">
         <div class="item send-announcment">
