--- a/Banikfy/bankerHome.html
+++ b/Banikfy/bankerHome.html
@@ -29,7 +29,7 @@
               <span class="material-symbols-outlined">credit_card</span>
               <h3>Credit Cards Requests</h3>
             </a>
-            <a href="">
+            <a href="loansRequests.html">
               <span class="material-symbols-outlined">
                 local_atm
                 </span>
@@ -39,12 +39,7 @@
               <span class="material-symbols-outlined">groups</span>
               <h3>Clients</h3>
             </a>
-            <a href="">
-              <span class="material-symbols-outlined">notifications</span>
-              <h3>Notifications</h3>
-              <span class="notifications-count">15</span>
-            </a>
-            <a href="">
+            <a href="reportsBanker.html">
               <span class="material-symbols-outlined">report</span>
               <h3>Reports</h3>
             </a>
