--- a/Banikfy/clientsBanker.html
+++ b/Banikfy/clientsBanker.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head >
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -25,7 +25,7 @@
               <span class="material-symbols-outlined">home</span>
               <h3>Home</h3>
             </a>
-            <a href="" >
+            <a href="creditCardsRequests.html" >
               <span class="material-symbols-outlined">credit_card</span>
               <h3>Credit Cards Requests</h3>
             </a>
@@ -39,12 +39,7 @@
               <span class="material-symbols-outlined">groups</span>
               <h3>Clients</h3>
             </a>
-            <a href="">
-              <span class="material-symbols-outlined">notifications</span>
-              <h3>Notifications</h3>
-              <span class="notifications-count">15</span>
-            </a>
-            <a href="">
+            <a href="reportsBanker.html">
               <span class="material-symbols-outlined">report</span>
               <h3>Reports</h3>
             </a>
@@ -86,63 +81,63 @@
                 <td>Mohamed Hassan</td>
                 <td>VIP</td>
                 <td>EGP 8,945,000</td>
-                <td><a href="#" onclick="showMore()" class="primary">More Details</a></td>
+                <td><a href="bankerClientDetails.html" onclick="showMore()" class="primary">More Details</a></td>
               </tr>
               <tr>
                 <td>98756</td>
                 <td>Karam Yasser</td>
                 <td>VIP</td>
                 <td>EGP 15,425,000</td>
-                <td><a href="#" onclick="showMore()" class="primary">More Details</a></td>
+                <td><a href="bankerClientDetails.html" onclick="showMore()" class="primary">More Details</a></td>
               </tr>
               <tr>
                 <td>46845</td>
                 <td>Sayed Hassan</td>
                 <td>Normal</td>
                 <td>EGP 375,000</td>
-                <td><a href="#" onclick="showMore()" class="primary">More Details</a></td>
+                <td><a href="bankerClientDetails.html" onclick="showMore()" class="primary">More Details</a></td>
               </tr>
               <tr>
                 <td>48498</td>
                 <td>Ahmed Hassan</td>
                 <td>Normal</td>
                 <td>EGP 810,000</td>
-                <td><a href="#" onclick="showMore()" class="primary">More Details</a></td>
+                <td><a href="bankerClientDetails.html" onclick="showMore()" class="primary">More Details</a></td>
               </tr>
               <tr>
                 <td>49674</td>
                 <td>Hassan Yasser</td>
                 <td>Normal</td>
                 <td>EGP 655,000</td>
-                <td><a href="#" onclick="showMore()" class="primary">More Details</a></td>
+                <td><a href="bankerClientDetails.html" onclick="showMore()" class="primary">More Details</a></td>
               </tr>
               <tr>
                 <td>98598</td>
                 <td>Ibrahim Sayed</td>
                 <td>Normal</td>
                 <td>EGP 1,345,000</td>
-                <td><a href="#" onclick="showMore()" class="primary">More Details</a></td>
+                <td><a href="bankerClientDetails.html" onclick="showMore()" class="primary">More Details</a></td>
               </tr>
               <tr>
                 <td>65486</td>
                 <td>Amany Karam</td>
                 <td>VIP</td>
                 <td>EGP 25,155,000</td>
-                <td><a href="#" onclick="showMore()" class="primary">More Details</a></td>
+                <td><a href="bankerClientDetails.html" onclick="showMore()" class="primary">More Details</a></td>
               </tr>
               <tr>
                 <td>35465</td>
                 <td>Sarah Ibrahim</td>
                 <td>Normal</td>
                 <td>EGP 25,000</td>
-                <td><a href="#" onclick="showMore()" class="primary">More Details</a></td>
+                <td><a href="bankerClientDetails.html" onclick="showMore()" class="primary">More Details</a></td>
               </tr>
               <tr>
                 <td>89725</td>
                 <td>Mohamed Hassan</td>
                 <td>VIP</td>
                 <td>EGP 5,540,000</td>
-                <td><a href="#" onclick="showMore()" class="primary">More Details</a></td>
+                <td><a href="bankerClientDetails.html" onclick="showMore()" class="primary">More Details</a></td>
               </tr>
               
             </tbody>
@@ -165,7 +160,7 @@
       }
       function handleKeyPress(event) {
         window.location.href = "clientsBankerSearch.html";
-    }
+      }
      
     </script>
   </body>
