--- a/Banikfy/creditCardsRequests.html
+++ b/Banikfy/creditCardsRequests.html
@@ -39,12 +39,7 @@
               <span class="material-symbols-outlined">groups</span>
               <h3>Clients</h3>
             </a>
-            <a href="">
-              <span class="material-symbols-outlined">notifications</span>
-              <h3>Notifications</h3>
-              <span class="notifications-count">15</span>
-            </a>
-            <a href="">
+            <a href="reportsBanker.html">
               <span class="material-symbols-outlined">report</span>
               <h3>Reports</h3>
             </a>
