adminHome Update - issuesUpdate

--- a/Banikfy/login.html
+++ b/Banikfy/login.html
@@ -151,7 +151,7 @@
         {
           sessionStorage["username"] = username;
           sessionStorage["password"] = password;
-          window.location.href = "adminHome.html";
+          window.location.href = "adminHome2.html";
         }
         else
         {
