--- a/Banikfy/manageBankers.html
+++ b/Banikfy/manageBankers.html
@@ -21,13 +21,19 @@
           </div>
         </div>
         <div class="sidebar">
-            <a href="adminHome.html">
+            <a href="adminHome2.html">
               <span class="material-symbols-outlined">home</span>
               <h3>Home</h3>
             </a>
             <a href="#" class="active">
                 <span class="material-symbols-outlined">hail</span>
                 <h3>Manage Bankers</h3>
+            </a>
+            <a href="issues.html">
+              <span class="material-symbols-outlined">
+                bug_report
+                </span>
+              <h3>Issues</h3>
             </a>
             <a href="#" id="settings-icon">
               <span class="material-symbols-outlined">
