--- a/Banikfy/loans.html
+++ b/Banikfy/loans.html
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class = "loans-table">
-          <h2>Loans Schedule installments</h2>
+          <h2>Loans installments schedule</h2>
           <table>
             <thead>
               <tr>
