add and block clients in admin

--- a/Banikfy/manageBankers.html
+++ b/Banikfy/manageBankers.html
@@ -27,7 +27,7 @@
             </a>
             <a href="#" class="active">
                 <span class="material-symbols-outlined">hail</span>
-                <h3>Manage Bankers</h3>
+                <h3>Manage clients and bankers</h3>
             </a>
             <a href="issues.html">
               <span class="material-symbols-outlined">
@@ -63,6 +63,18 @@
             <span class="material-symbols-outlined">block</span>
             <h3><a href="#" onclick="closeBlockPopUp()">Block Banker</a></h3>
         </div>
+
+        <div class="item open-client">
+          <span class="material-symbols-outlined">
+            person_add
+            </span>
+          <h3><a href="#" onclick="Addnewclientpopup()">Add new client</a></h3>
+      </div>
+
+      <div class="item block-client">
+        <span class="material-symbols-outlined">block</span>
+        <h3><a href="#" onclick="blockclientpopup()">Block client</a></h3>
+    </div>
 
       </main>
     </div>
