change reminders into issues

--- a/Banikfy/notifications.html
+++ b/Banikfy/notifications.html
@@ -97,12 +97,12 @@
             <span class="material-symbols-outlined">
               notifications_active
               </span>
-            <h1>Reminders</h1>
+            <h1>Issues</h1>
             <div class="Reminders-box">
               <ul class="cool-list">
-                <li>Loan installment of $900 due on 6/5/2023</li>
-                <li>Make a credit card payment before the due date to avoid late fees.</li>
-                <li>"Overdue payment: $654 for credit card ending in 6548.</li>
+                <li>Issue with ID 22345 has been resolved</li>
+                <li>Issue with ID 33637 is still under inspection</li>
+                <li>Suggestion with ID 4447 will be taken into consideration</li>
               </ul>
             </div>
           </div>
