--- a/Banikfy/notifications.html
+++ b/Banikfy/notifications.html
@@ -95,7 +95,7 @@
           
           <div class="Reminders">
             <span class="material-symbols-outlined">
-              notifications_active
+              release_alert
               </span>
             <h1>Issues</h1>
             <div class="Reminders-box">
