--- a/Banikfy/payments.html
+++ b/Banikfy/payments.html
@@ -136,7 +136,7 @@
           <span class="material-symbols-outlined">
             Paid
           </span>
-          <h3><a href="#" onclick="payForCreditCardPopUp()">Pay for Credit Card</a></h3>
+          <h3><a href="#" onclick="payForCreditCardPopUp()">Pay for Credit Card Bill</a></h3>
         </div>
         <div class="item pay-loans">
           <span class="material-symbols-outlined">
