Loans schedules update

--- a/Banikfy/loans.html
+++ b/Banikfy/loans.html
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class = "loans-table" id="loansTable1">
-          <h2>Loans installments schedule (loan 1)</h2>
+          <h2>Loans installments schedule (Loan 1)</h2>
           <table>
             <thead>
               <tr>
@@ -170,7 +170,7 @@
 
         <!--Table2-->
         <div class = "loans-table" id="loansTable2">
-          <h2>Loans installments schedule (loan 2)</h2>
+          <h2>Loans installments schedule (Loan 2)</h2>
           <table>
             <thead>
               <tr>
