--- a/Banikfy/creditcard.html
+++ b/Banikfy/creditcard.html
@@ -177,6 +177,12 @@
             </span>
           <h3><a href="#" onclick="applyForCreditCardopenPopUp()">Apply for Credit Card</a></h3>
         </div>
+        <div class="item disable-credit-card">
+          <span class="material-symbols-outlined">
+            credit_card_off
+            </span>
+          <h3><a href="#" onclick="applyForCreditCardopenPopUp()">Apply for Credit Card</a></h3>
+        </div>
       </div>
     </div>
     <div class="applyForCreditCardPopUp" id="popup">
