--- a/Banikfy/home.html
+++ b/Banikfy/home.html
@@ -147,7 +147,7 @@
               </tr>
             </tbody>
           </table>
-          <a href="#" class="showall">Show All</a>
+          <a href="#" class="showall">View other Bank account transactions</a>
         </div>
       </main>
       <div class="right">
