view cc transactions

--- a/Banikfy/creditcard.html
+++ b/Banikfy/creditcard.html
@@ -154,7 +154,7 @@
               </tr>
             </tbody>
           </table>
-          <a href="#" class="showall">Show All</a>
+          <a href="#" class="showall">View other Credit card transactions</a>
         </div>
       </main>
       <div class="right">
