--- a/Banikfy/clientsBankerSearch.html
+++ b/Banikfy/clientsBankerSearch.html
@@ -35,7 +35,7 @@
                 </span>
               <h3>Loan Requests</h3>
             </a>
-            <a href="" class="active">
+            <a href="clientsBanker.html" class="active">
               <span class="material-symbols-outlined">groups</span>
               <h3>Clients</h3>
             </a>
@@ -43,7 +43,7 @@
               <span class="material-symbols-outlined">report</span>
               <h3>Reports</h3>
             </a>
-            <a href="#" id="settings-icon">
+            <a href="bankerSettings.html" id="settings-icon">
               <span class="material-symbols-outlined">
                 settings
                 </span>
