--- a/Banikfy/issues.html
+++ b/Banikfy/issues.html
@@ -27,7 +27,7 @@
             </a>
             <a href="manageBankers.html">
                 <span class="material-symbols-outlined">hail</span>
-                <h3>Manage Bankers</h3>
+                <h3>Manage clients and bankers</h3>
             </a>
             <a href="issues.html" class="active">
               <span class="material-symbols-outlined">
@@ -35,7 +35,7 @@
                 </span>
               <h3>Issues</h3>
             </a>
-            <a href="#" id="settings-icon">
+            <a href="settingsAdmin.html" id="settings-icon">
               <span class="material-symbols-outlined">
                 settings
                 </span>
