--- a/Banikfy/manageBankers.html
+++ b/Banikfy/manageBankers.html
@@ -35,7 +35,7 @@
                 </span>
               <h3>Issues</h3>
             </a>
-            <a href="#" id="settings-icon">
+            <a href="settingsAdmin.html" id="settings-icon">
               <span class="material-symbols-outlined">
                 settings
                 </span>
