--- a/Banikfy/bankerClientDetails.html
+++ b/Banikfy/bankerClientDetails.html
@@ -29,7 +29,7 @@
               <span class="material-symbols-outlined">credit_card</span>
               <h3>Credit Cards Requests</h3>
             </a>
-            <a href="">
+            <a href="loansRequests.html">
               <span class="material-symbols-outlined">
                 local_atm
                 </span>
@@ -39,11 +39,11 @@
               <span class="material-symbols-outlined">groups</span>
               <h3>Clients</h3>
             </a>
-            <a href="">
+            <a href="reportsBanker.html">
               <span class="material-symbols-outlined">report</span>
               <h3>Reports</h3>
             </a>
-            <a href="#" id="settings-icon">
+            <a href="bankerSettings.html" id="settings-icon">
               <span class="material-symbols-outlined">
                 settings
                 </span>
