--- a/Banikfy/creditCardsRequests.html
+++ b/Banikfy/creditCardsRequests.html
@@ -43,7 +43,7 @@
               <span class="material-symbols-outlined">report</span>
               <h3>Reports</h3>
             </a>
-            <a href="#" id="settings-icon">
+            <a href="clientSettings.html" id="settings-icon">
               <span class="material-symbols-outlined">
                 settings
                 </span>
