--- a/Banikfy/creditcard.html
+++ b/Banikfy/creditcard.html
@@ -39,7 +39,7 @@
               <span class="material-symbols-outlined">payments</span>
               <h3>Payments</h3>
             </a>
-            <a href="#">
+            <a href="notifications.html">
               <span class="material-symbols-outlined">notifications</span>
               <h3>Notifications</h3>
               <span class="notifications-count">15</span>
@@ -48,7 +48,7 @@
               <span class="material-symbols-outlined">report</span>
               <h3>Report</h3>
             </a>
-            <a href="#" id="settings-icon">
+            <a href="clientSettings.html" id="settings-icon">
               <span class="material-symbols-outlined">
                 settings
                 </span>
