--- a/Banikfy/notifications.html
+++ b/Banikfy/notifications.html
@@ -48,7 +48,7 @@
               <span class="material-symbols-outlined">report</span>
               <h3>Report</h3>
             </a>
-            <a href="#" id="settings-icon">
+            <a href="clientSettings.html" id="settings-icon">
               <span class="material-symbols-outlined">
                 settings
                 </span>
