--- a/Banikfy/bankerSettings.html
+++ b/Banikfy/bankerSettings.html
@@ -21,7 +21,7 @@
               </div>
             </div>
             <div class="sidebar">
-                <a href="#" class="active">
+                <a href="home.html">
                   <span class="material-symbols-outlined">home</span>
                   <h3>Home</h3>
                 </a>
