--- a/Banikfy/Transfer.html
+++ b/Banikfy/Transfer.html
@@ -118,7 +118,7 @@
       </div>
     </div>
     <div class="popupTransferSuccess" id="transferSuccess">
-      <h1>Trasfer Success</h1>
+      <h1>Transfer Success</h1>
       <div class="close">
         <button onclick="closeSuccess()" id="closeSuccess"><h3>Close</h3></button>
       </div>
