--- a/Banikfy/creditCardsRequests.html
+++ b/Banikfy/creditCardsRequests.html
@@ -43,7 +43,7 @@
               <span class="material-symbols-outlined">report</span>
               <h3>Reports</h3>
             </a>
-            <a href="clientSettings.html" id="settings-icon">
+            <a href="bankerSettings.html" id="settings-icon">
               <span class="material-symbols-outlined">
                 settings
                 </span>
@@ -145,7 +145,6 @@
               
             </tbody>
           </table>
-          <a href="#" class="showall">Show All</a>
         </div>
         <!--
         <div class="main-division">
