--- a/Banikfy/manageBankers.html
+++ b/Banikfy/manageBankers.html
@@ -87,7 +87,7 @@
         <input type="text" placeholder="National Id" />
   
         <label for="Name">Name</label>
-        <input type="number" placeholder="Name" />
+        <input type="text" placeholder="Name" />
   
         <label for="Position">Position</label>
         <select>
@@ -111,7 +111,7 @@
         <input type="text" placeholder="Banker Id" />
   
         <label for="Name">Name</label>
-        <input type="number" placeholder="Name" />
+        <input type="text" placeholder="Name" />
   
         <div class="close-button">
           <button id="close-button-popUP" onclick="closeBlockPopUp()">Close</button>
@@ -142,7 +142,7 @@
         <input type="text" placeholder="National Id" />
   
         <label for="Name">Name</label>
-        <input type="number" placeholder="Name" />
+        <input type="text" placeholder="Name" />
   
         <label for="Name">Phone</label>
         <input type="text" placeholder="Phone" />
@@ -163,7 +163,7 @@
         <input type="number" placeholder="National ID" />
 
         <label for="Name">Client Name</label>
-        <input type="number" placeholder="Name" />
+        <input type="text" placeholder="Name" />
   
         <label for="phone">Account Number</label>
         <input type="text" placeholder="Account Number" />
