--- a/Banikfy/reportsBanker.html
+++ b/Banikfy/reportsBanker.html
@@ -43,7 +43,7 @@
               <span class="material-symbols-outlined">report</span>
               <h3>Reports</h3>
             </a>
-            <a href="#" id="settings-icon">
+            <a href="bankerSettings.html" id="settings-icon">
               <span class="material-symbols-outlined">
                 settings
                 </span>
@@ -95,20 +95,19 @@
                 </tr>
                 <tr>
                   <td>23466</td>
-                  <td>Jory bakr</td>
+                  <td>Ann Usama</td>
                   <td>Theft</td>
                   <td><a href="#" onclick="solve()" style="color: #41f1b6;">Mark as solved</a></td>
                 </tr>
                 <tr>
                   <td>87956</td>
-                  <td>shaimaa</td>
+                  <td>youssef yasser</td>
                   <td>Damage</td>
                   <td><a href="#" onclick="solve()" style="color: #41f1b6;">Mark as solved</a></td>
                 </tr>
                 
               </tbody>
             </table>
-            <a href="#" class="showall">Show All</a>
           </div>
 
 
