--- a/Banikfy/signup.html
+++ b/Banikfy/signup.html
@@ -90,6 +90,46 @@
     padding: 0 2.6rem;
   }
 }
+
+
+#CloseBankAccountSuccess{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    padding: 50px;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+    background: #181a1e;
+    border-radius: 2rem;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
+#CloseBankAccountSuccess.active{
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s ;
+}
+.popupCloseBankAccountSuccess h1{
+    margin-left: 1.8rem;
+    margin-bottom: 1rem;
+}
+.popupCloseBankAccountSuccess button{
+    
+    padding: 1.4rem 1.8rem;
+    border-radius: 1.2rem;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+    transition: all 300ms ease;
+    width: 70%;
+    margin-top: 0.5rem;
+    margin-left: 2.5rem;
+    border: 2px solid;
+}
+.popupCloseBankAccountSuccess button:hover{
+    background-color: #41f1b6;
+}
     </style>
 </head>
 <body>
@@ -111,8 +151,28 @@
             <input type="password" placeholder="" id="password">
         </form>
         <div>
-            <button id="signUpBtn" class="button">Sign Up</button>
+            <button id="signUpBtn" onclick="signup()" class="button">Sign Up</button>
         </div>
     </div>
+
+    <div class="popupCloseBankAccountSuccess" id="CloseBankAccountSuccess">
+      <h1>SignUp successfully</h1>
+      <div class="close">
+        <button onclick="SignUpClose()" id="closeSuccess"><h3>Close</h3></button>
+      </div>
+    </div>
+
+    <script>
+      function signup(){
+
+        var popup = document.getElementById('CloseBankAccountSuccess');
+        popup.classList.toggle('active')
+      }
+      function SignUpClose(){
+
+        var popup = document.getElementById('CloseBankAccountSuccess');
+        popup.classList.toggle('active')
+      }
+    </script>
 </body>
 </html>
