--- a/Banikfy/bankerHome.html
+++ b/Banikfy/bankerHome.html
@@ -62,7 +62,7 @@
 
             
             <div class="report">
-              <h3 style="color: lightgreen;">Visitors</h3>
+              <h3 style="color: lightgreen;">Complaints</h3>
               <div>
                   <details style="color: #7380ec;">
                       <h1>250,635</h1>
@@ -73,7 +73,7 @@
             </div>
 
             <div class="report">
-              <h3 style="color: blue;">New Clients</h3>
+              <h3 style="color: blue;">Performance</h3>
               <div>
                   <details style="color: #7380ec;">
                       <h1>50,365</h1>
@@ -132,14 +132,14 @@
         data: {
           labels: ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'],
           datasets:[{
-            label:'New Clients',
+            label:'Complaints',
             data:[1500,3500,4000,7000,15000,23545,29534,29600,30564,40545,20533,50635],
             borderColor:'blue',
             borderWidth:3
           },
           
           {
-            label: 'visitors',
+            label: 'performance',
             data:[6500,15500,24000,37000,115000,123545,129534,129600,130564,140545,220533,250635],
             borderColor:'lightgreen',
             borderWidth:3
